# comp-cient

./: README.md
cap04/: questao46.py
cap04/src/: CMakeLists.txt  RayleightCoeffIter.cpp
cap05/: CMakeLists.txt  main.c  programa_5_1.c  questao5_1.py  questao5_16.py
cap06/: CMakeLists.txt  Laplaciano.c  LaplacianoNaoLinear.c  LaplacianoNaoLinearPontoFixo.c  LaplacianoNaoLinear_gsl.c  LaplacianoTransiente.c  Makefile  entrada.txt  plot_laplace.py  plot_transiente.py  programa_6_1.c  solvers.c  solvers.h
